@@ -19,7 +19,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: php_reflection.c,v 1.78 2003/12/22 20:03:01 helly Exp $ */
+/* $Id: php_reflection.c,v 1.79 2004/01/03 13:51:01 derick Exp $ */
 #include "zend.h"
 #include "zend_API.h"
 #include "zend_default_classes.h"
@@ -616,7 +616,7 @@ static void _property_string(string *str, zend_property_info *prop, char *prop_n
 			string_printf(str, "static ");
 		}
 
-		unmangle_property_name(prop->name, &class_name, &prop_name);
+		zend_unmangle_property_name(prop->name, &class_name, &prop_name);
 		string_printf(str, "$%s", prop_name);
 	}
 
@@ -758,7 +758,7 @@ static void reflection_property_factory(zend_class_entry *ce, zend_property_info
 	property_reference *reference;
 	char *class_name, *prop_name;
 
-	unmangle_property_name(prop->name, &class_name, &prop_name);
+	zend_unmangle_property_name(prop->name, &class_name, &prop_name);
 
 	if (!(prop->flags & ZEND_ACC_PRIVATE)) {
 		/* we have to seach the class hierarchy for this (implicit) public or protected property */
@@ -1866,7 +1866,7 @@ ZEND_METHOD(reflection_class, getDefaultProperties)
 
 			zend_hash_get_current_key_ex(&ce->default_properties, &key, &key_len, &num_index, 0, &pos);
 			zend_hash_move_forward_ex(&ce->default_properties, &pos);
-			unmangle_property_name(key, &class_name, &prop_name);
+			zend_unmangle_property_name(key, &class_name, &prop_name);
 			if (class_name && class_name[0] != '*' && strcmp(class_name, ce->name)) {
 				/* filter privates from base classes */
 				continue;
