@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5 RC1
+- Fixed var_export() to show public, protected and private modifiers properly.
+  (Derick)
 - Fixed problems with longlong values in mysqli. (Georg)
 - Fixed class name case preserving of user defined classes. (Marcus)
 - Fixed bug #26762 (unserialize() produces lowercase classnames). (Marcus)
